# polkit-gnome

./: COPYING  HACKING  Makefile.am  Makefile.in  NEWS  PolicyKit-gnome.doap  README  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json
.build-info/: make-config
data/: Makefile.am  polkit-gnome.schemas.in
docs/: Makefile.am  Makefile.in  polkit-gtk-1-sections.txt
examples/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  km.po  kn.po  ko.po  lt.po  lv.po  ml.po  (+27 more)
polkit-gnome/: polkit-gnome-toggle-action.c
polkitgtk/: Makefile.am  Makefile.in  example.c  polkitgtktypes.h  polkitlockbutton.c  polkitlockbutton.h
src/: Makefile.am  Makefile.in  main.c  polkit-gnome-auth-dialog.c  polkit-gnome-auth-dialog.h  polkit-gnome-authentication-agent-1.desktop.in  polkit-gnome-authentication-agent-1.desktop.in.in  polkit-gnome-manager.c  polkitgnomeauthenticationdialog.c  polkitgnomeauthenticationdialog.h  polkitgnomeauthenticator.c  polkitgnomeauthenticator.h  polkitgnomelistener.c  polkitgnomelistener.h  polkitgnomemarshal.c  polkitgnomemarshal.h
tools/: Makefile.am  polkit-gnome-authorization.c
